--- a/css/login.css
+++ b/css/login.css
@@ -84,7 +84,7 @@ body {
 }
 .imgBack {
     position: absolute;
-    background-image: url(../img/abstract-low-poly-banner-with-orange-light-shade_1017-24636-1.webp);
+    background-image: url(../images/abstract-low-poly-banner-with-orange-light-shade_1017-24636.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
